// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JSON utility tests parse 1`] = `
Object {
  "constructor": "c",
  "n0": 9007199254740991,
  "n1": 9007199254740992n,
  "n2": 12,
  "n3": 1.1,
}
`;

exports[`JSON utility tests parseAlwaysAsBig 1`] = `
Object {
  "constructor": "c",
  "n0": 9007199254740991n,
  "n1": 9007199254740992n,
  "n2": 12n,
  "n3": 1.1,
}
`;
